...
            android:textColor="#000000"
            android:layout_weight="1"
            android:textSize="16dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:gravity="center"
            android:id="@+id/title"
            android:textAlignment="center"
            android:text="Rate us if you like the app"
            />
            </ScrollView>

            <VideoView
...
            android:layout_marginTop="36dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="Cancel"
                android:id="@+id/negativeBtn"
                android:background="@drawable/curved_shape2"
                android:textColor="#ffffff"
                />
            <Button
                android:layout_width="0dp"
...
