...
        android:id="@+id/list_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/listview_background_rounded">

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@color/smart_register_client_divider_color"
            android:dividerHeight="@dimen/smart_register_client_divider_height"
            android:visibility="invisible" />

...
