...
    <string name="field_entries">Stock Register</string>
    <string name="field_title">Stock Register</string>
    <string name="str_field_search_hint">Search Register</string>
    <string name="pick_report">Report</string>
    <string name="field_details_title">Stock Position</string>
    <string name="title_activity_vaccine_report">VaccineReport</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="userNameText">User Name</string>
    <string name="passwordText">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done_today">Done Today</string>
...
